add badge share
